--- a/wuiwiu.ipynb
+++ b/wuiwiu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
     "    return mel_spec_norm\n",
     "\n",
     "\n",
-    "spectrogram = load_and_preprocess('zelda_lullaby/sample_0.wav')\n",
+    "spectrogram = load_and_preprocess('samples/zelda_lullaby/sample_0.wav')\n",
     "print(spectrogram.shape)\n"
    ]
   },
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset shape: (40, 128, 128)\n",
+      "Dataset shape: (40, 128, 517)\n",
       "Labels shape: (40,)\n"
      ]
     }
@@ -78,7 +78,7 @@
     "        file_list = glob.glob(os.path.join(dir_path, '*.wav'))\n",
     "        for filepath in file_list:\n",
     "            spec = load_and_preprocess(filepath, sr=sr, n_mels=n_mels, duration=duration, hop_length=hop_length)\n",
-    "            # Optionally, force a fixed width (time dimension) by padding/cropping.\n",
+    "            \n",
     "            # For example, let's force a width of 128:\n",
     "            if spec.shape[1] < 128:\n",
     "                pad_width = 128 - spec.shape[1]\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Dateien\\python\\wuiwiu\\.venv\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -239,7 +247,7 @@
     "    \n",
     "    layers.Flatten(),\n",
     "    layers.Dense(128, activation='relu'),\n",
-    "    layers.Dense(2, activation='softmax')  # Two classes for two melodies\n",
+    "    layers.Dense(len(directories), activation='softmax')  # Two classes for two melodies\n",
     "])\n",
     "\n",
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
@@ -320,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
